hotfix: add function links social media

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="images/photo.jpg" alt="Foto pessoal" class="photo">
       </div>
 
-      <h1>Larissa Giaccon</h1>
+      <h1 id="userName">Larissa Giaccon</h1>
       <a href="https://www.github.com/larissagiaccon" alt="Github Larissa Giaccon">
         <img src="images/github.svg" alt="Ícone do Github">
         larissagiaccon
@@ -34,23 +34,23 @@
 
       <p>Engenheira de Computação</p>
 
-      <ul>
-        <li>
+      <ul id="socialLinks">
+        <li class="linkedin">
           <a href="https://www.linkedin.com/in/larissagiaccon/" alt="LinkedIn Larissa Giaccon" target="_blank">
             <i data-feather="linkedin" class="icon" alt="Ícone do LinkedIn"></i>
           </a>
         </li>
-        <li>
+        <li class="instagram">
           <a href="https://www.instagram.com/larissagiaccon" alt="Instagram Larissa Giaccon" target="_blank">
             <img src="images/instagram.svg" alt="Ícone do Instagram">
           </a>
         </li>
-        <li>
+        <li class="facebook">
           <a href="https://www.facebook.com/larissagiaccon" alt="Facebook Larissa Giaccon" target="_blank">
             <img src="images/facebook.svg" alt="Ícone do Facebook">
           </a>
         </li>
-        <li>
+        <li class="twitter">
           <a href="https://www.twitter.com/" alt="Twitter" target="_blank">
             <img src="images/twitter.svg" alt="Ícone do Twitter">
           </a>
@@ -61,6 +61,24 @@
 
   <script>
     feather.replace()
+
+    const linksSocialMedia = {
+        github: 'larissagiaccon',
+        linkedin: 'in/larissagiaccon',
+        instagram: 'larissagiaccon',
+        facebook: 'larissagiaccon',
+        twitter: ''
+      }
+
+      function changeSocialMediaLinks() {
+        for (let li of socialLinks.children) {
+          const social = li.getAttribute('class')
+          li.children[0].href = `https://www.${social}.com/${linksSocialMedia[social]}`
+          alert(li.children[0].href)
+        }
+      }
+
+      changeSocialMediaLinks()
   </script>
 </body>
 
