hotfix: adapted background image

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 
 <html>
 
-<head>
+<head lang="pt_BR">
   <title>NLW Heat</title>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 
